Update page architecture to properly use header tag and resolve overlap (#8)

--- a/public/globals.css
+++ b/public/globals.css
@@ -5,18 +5,14 @@
 @tailwind utilities;
 
 :root {
-  --nav-height: 65px;
-  --border-color: #dce6e9;
   --link-color: rgba(75, 85, 99, 1);
   --highlighted-link-color: black;
   --text-color: rgba(75, 85, 99, 1);
   --text-color-secondary: #3d4356;
-  --side-nav-width: 240px;
   --primary-color: theme('colors.primary');
 }
 
 [data-theme='dark'] {
-  --border-color: rgb(49, 54, 60);
   --link-color: rgba(255, 255, 255, 0.8);
   --highlighted-link-color: white;
   --text-color: white;
@@ -60,6 +56,7 @@
 }
 
 html {
+  text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
